# nextcloud-ics-sync

./: Cargo.toml  README.md
src/: calendar.rs  config.rs  ics_parser.rs  lib.rs  main.rs  nextcloud.rs
src/nextcloud/: api.rs  mod.rs  models.rs  utils.rs
