[package]
name = "nextcloud-ics-sync"
authors = ["Jonas Seifried"]
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
icalendar = "0.17.3"
log = "0.4.27"
quick-xml = "0.38.3"
reqwest = "0.12.23"
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.8"
tokio = { version = "1.47.1", features = ["full"] }
urlencoding = "2.1.3"
