[package]
name = "nextcloud-ics-sync"
authors = ["Jonas Seifried"]
version = "1.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.9"
futures = "0.3.32"
icalendar = "0.17.6"
log = "0.4.29"
quick-xml = "0.38.4"
reqwest = "0.12.28"
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.8"
tokio = { version = "1.50.0", features = ["full"] }
urlencoding = "2.1.3"
